# ocr-toolkit

./: .flake8  .gitignore  LICENSE  README.md  README_CN.md  model_comparison_test.py  pyproject.toml
.claude/: settings.local.json
ocr_toolkit/: __init__.py  benchmark.py  common.py  config.py  dual_processor.py  markitdown_processor.py  ocr_processor_wrapper.py  office_converter.py  quality_evaluator.py
ocr_toolkit/cli/: __init__.py  benchmark.py  convert.py  extract.py  search.py
ocr_toolkit/converters/: __init__.py  com_manager.py  office_converter.py
ocr_toolkit/converters/strategies/: __init__.py  base.py  docx_to_pdf.py  excel_com.py  libreoffice.py  powerpoint_com.py  word_com.py
ocr_toolkit/processors/: __init__.py  base.py  cnocr_handler.py  document_loader.py  excel_processor.py  factory.py  markitdown_processor.py  ocr_processor.py  openocr_doc_handler.py  paddleocr_handler.py  paddleocr_vl_handler.py  stats.py  text_file_processor.py
ocr_toolkit/utils/: __init__.py  cli_args.py  cli_common.py  file_discovery.py  file_tree_display.py  model_loader.py  paddle_config.py  page_selection.py  path_normalizer.py  profiling.py  runtime_config.py  temp_file_manager.py
scripts/: benchmark_zh_params.py  slice_pdf_first_pages.py
testFile/: Mock Exam 2.docx  The People Perspective Exam - Final 2.docx  Week12 - summary.pptx  dummy.docx  dummy.md  dummy.txt
testFile/enhanced_preserve_test/level1/documents/: instructions for writing 4-1.md
testFile/excel_samples/: Income Statement Solutions.xlsx  README.txt  Trial Balance Solutions.xlsx
testFile/final_validation_output/: 2.md  Mock Exam 2.md  choice question.md  lesson4.md  week 11 ppt.md
testFile/refactor_test/level1/level2/images/: choice question.md
testFile/tree_test/alternative_branch/docs/: lesson4.md
testFile/tree_test/level1/level2/level3/level4/mixed/: discussion 4 instructions.md
tests/: __init__.py  conftest.py
tests/benchmarks/: analyze_results.py  comparison_batch_test.py  dual_path_comparison_test.py  model_comparison.py  office_to_pdf_converter.py
tests/helpers/: __init__.py  test_utils.py
tests/integration/: test_end_to_end.py  test_full_ocr_integration.py  test_preserve_structure_integration.py
tests/output/: test_ocr.md
tests/output/paddleocr/: 2.md
tests/output/paddleocr_vl/: 2.md
tests/output/perf_test/: 2.md
tests/output/test_with_images/: 2.md
tests/output/with_images/: 2.md
tests/unit/: test_cli_commands.py  test_dual_processor.py  test_excel_processor.py  test_file_discovery_enhanced.py  test_markitdown_processor.py  test_ocr_processor.py  test_ocr_processor_wrapper.py  test_office_converter.py  test_openocr_doc_handler_init.py  test_paddleocr_vl_handler_init.py  test_processing_stats.py  test_quality_evaluator.py
